--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   "homepage": "https://github.com/hello-world-ttj/CustomerLabs#readme",
   "description": "",
   "dependencies": {
+    "cli-color": "^2.0.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0",
+    "volleyball": "^1.5.1"
   }
 }
