--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/hello-world-ttj/CustomerLabs#readme",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "cli-color": "^2.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
